# semantic-search-cli

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  Cross.toml  README.en.md  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.claude/skills/semantic-search/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml
embedding-server/: README.md  pyproject.toml  server.py
scripts/: embedding-server.sh  install.sh  uninstall.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: config.rs  import.rs  index.rs  mod.rs  search.rs  serve.rs  source.rs  status.rs  tags.rs
src/client/: mod.rs
src/models/: config.rs  document.rs  mod.rs  search.rs  source.rs  tag.rs
src/server/: embedding.rs  mod.rs  protocol.rs
src/services/: batch.rs  chunker.rs  embedding.rs  metrics.rs  mod.rs  vector_store.rs
src/services/vector_store/: mod.rs  pgvector.rs  qdrant.rs
src/sources/: confluence.rs  figma.rs  jira.rs  local.rs  mod.rs
src/utils/: file.rs  mod.rs  retry.rs  text.rs
