[package]
name = "ssearch"
version = "0.1.0"
edition = "2024"
description = "Semantic search CLI for local files and external data sources"
authors = ["Semantic Search CLI Contributors"]
license = "MIT"
repository = "https://github.com/junyeong-ai/semantic-search-cli"
keywords = ["search", "semantic", "embeddings", "cli", "qdrant"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Vector database
qdrant-client = "1.12"

# Utilities
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
glob = "0.3"
uuid = { version = "1.11", features = ["v5"] }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"

[[bin]]
name = "ssearch"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
