[package]
name = "ssearch"
version = "0.1.0"
edition = "2024"
description = "Semantic search CLI for local files and external data sources"
authors = ["Semantic Search CLI Contributors"]
license = "MIT"
repository = "https://github.com/junyeong-ai/semantic-search-cli"
keywords = ["search", "semantic", "embeddings", "cli", "qdrant"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# HTTP client (using rustls for cross-compilation support)
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Vector database
qdrant-client = "1.15"

# Utilities
dirs = "6.0"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde"] }
walkdir = "2.5"
glob = "0.3.3"
uuid = { version = "1.19", features = ["v5"] }
indicatif = "0.17.11"
console = "0.16"
regex = "1.12.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20"

[[bin]]
name = "ssearch"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
