[package]
name = "ssearch"
version = "0.2.0"
edition = "2024"
description = "Semantic search CLI for local files and external data sources"
authors = ["Semantic Search CLI Contributors"]
license = "MIT"
repository = "https://github.com/junyeong-ai/semantic-search-cli"
keywords = ["search", "semantic", "embeddings", "cli", "qdrant"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Vector database
qdrant-client = "1.15"

# PostgreSQL + pgvector (no MySQL to avoid rsa vulnerability)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Async trait
async-trait = "0.1"

# ONNX Runtime
ort = "2.0.0-rc.10"

# Tokenizers
tokenizers = "0.22"

# Numeric computing
ndarray = "0.16"

# SQLite for metrics
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
glob = "0.3"
uuid = { version = "1.19", features = ["v5"] }
indicatif = "0.17"
console = "0.16"
regex = "1.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20"

[[bin]]
name = "ssearch"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
