[project]
name = "ssearch-embedding-server"
version = "0.1.0"
description = "Embedding server for semantic-search-cli"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Semantic Search CLI Contributors" }
]
keywords = ["embeddings", "sentence-transformers", "api", "fastapi"]

dependencies = [
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.10.0",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
embedding-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
